src/objects/BE_Stockholder__c.object
<CustomObject>
    <fields>
        <fullName>Account_Planning__c</fullName>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Stockholders</relationshipLabel>
        <relationshipName>Stockholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BBVA_Classification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clasificación BBVA</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBVA_Debt__c</fullName>
        <label>Deuda BBVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Buro</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de documento</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Tipo de documento</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DNI</fullName>
                </value>
                <value>
                    <fullName>RUC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nacionalidad</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <label>Participación</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBS_Classification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clasificación SBS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBS_Debt__c</fullName>
        <label>Deuda SBS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Stockholder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de accionista</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stockholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
		<fullName>BE_ValidateParticipation</fullName>
		<active>true</active>
		<errorConditionFormula>Participation__c &gt; 0.1</errorConditionFormula>
		<errorMessage>Valor fuera del rango válido. El porcentaje máximo permitido es 100.</errorMessage>
	</validationRules>
    <validationRules>
        <fullName>Invalid_Document_Number</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNUMBER(DocumentNumber__c)</errorConditionFormula>
        <errorDisplayField>DocumentNumber__c</errorDisplayField>
        <errorMessage>Debe ingresar un número de documento valido.</errorMessage>
    </validationRules>
</CustomObject>